web-infras/parser/tests/fixtures/babel/es2017/async-functions/no-constructor/output.txt
[SyntaxError]: Class constructor may not be an async method. (2,9)
2|  async constructor() {}
 |       ^
